@@ -87,6 +87,7 @@ gnulib_modules="
     d-type
     dirent-safer
     dirname
+    dup2
     errno
     error
     faccessat
