@@ -35,6 +35,10 @@ of the - yet more portable - '( -type l -o -type d )'.
 find now diagnoses failures returned by readdir().  This bug was inherent
 in the use of FTS.
 
+xargs now supports the -o, --open-tty option to reopen stdin as /dev/tty
+in the child process before executing the command; useful to run an
+interactive application.  Added for compatibility with BSD.
+
 ** Documentation Changes
 
 Some minor documentation improvements are listed in "Bug Fixes" below.
